--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,22 @@
         android:id="@+id/usersFragment"
         android:name="com.sports.typecode.ui.users.UsersFragment"
         android:label="UsersFragment"
-        tools:layout="@layout/sreen_users"/>
+        tools:layout="@layout/sreen_users">
+        <action
+            android:id="@+id/action_usersFragment_to_photoFragment"
+            app:destination="@id/photoFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/photoFragment"
+        android:name="com.sports.typecode.ui.photos.PhotoFragment"
+        android:label="PhotoFragment"
+        tools:layout="@layout/sreen_photos">
+
+        <argument
+            android:name="selectUserId"
+            app:argType="integer" />
+    </fragment>
+
+
 </navigation>
