--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -42,7 +42,7 @@
             android:layout_height="1dp"
             android:background="#C8C8C8"
             android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>
 
