--- a/app/src/main/res/layout/sreen_photos.xml
+++ b/app/src/main/res/layout/sreen_photos.xml
@@ -20,13 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingTop="32dp"
+            android:background="@color/white"
+            android:layout_marginTop="48dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/item_photo"
-            android:layout_marginTop="16dp"/>
+            tools:listitem="@layout/item_photo"/>
 
         <ImageView
             android:id="@+id/btn_back_to_users"
