--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -47,6 +47,7 @@
                 tools:text="accusamus beatae ad facilis cum similique qui sunt"
                 android:text="@{photo.title}"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image"/>
