--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -40,7 +40,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#C8C8C8"
+            android:background="#F0F0F0"
             android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
